--- a/app/views/summary/details.html.erb
+++ b/app/views/summary/details.html.erb
@@ -19,7 +19,7 @@
 						<td> <%= total %> </td>				
 						<% status = "#{od.status}/#{@order_status_total.find(od.id).total_status}" %>
 						<td> <%= status  %> </td>
-						<td> <%= link_to "Download Bill", summary_print_bill_path(number: od.number, date: date, total: total, status: status, customername: od.customer_name) %> </td>
+						<td> <%= link_to "Print Bill", summary_print_bill_path(number: od.number, date: date, total: total, status: status, customername: od.customer_name) %> </td>
 					</tr>
 				<% end %>
 			</tbody>
